<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.papp.ui.PA">

    <Button
        android:id="@+id/print_button"
        android:layout_width="140dp"
        android:layout_height="46dp"
        android:layout_marginTop="45dp"
        android:text="@string/print"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/barcodevalue"
        app:layout_constraintStart_toStartOf="@+id/barcode_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/barcode_type_spinner" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typebarcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Spinner
        android:id="@+id/barcode_type_spinner"
        android:layout_width="138dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:entries="@array/barcodeNames"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/template_button"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/print_template"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/print_button"
        app:layout_constraintTop_toBottomOf="@+id/print_button" />

    <Button
        android:id="@+id/button_templates_xml"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="@string/template_xml"
        app:layout_constraintStart_toStartOf="@+id/print_button"
        app:layout_constraintTop_toBottomOf="@+id/print_button" />

</androidx.constraintlayout.widget.ConstraintLayout>